Deployment/docker-nsq/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 8000 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                codec_type: auto
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/pkg.policy.policypb.PolicyService/Get",
                            headers:
                              - name: "Content-Type"
                                prefixMatch: "application/grpc-web-text"
                          route:
                            cluster: scoretrak
                            idle_timeout: 0s
                            max_grpc_timeout: 0s
                        - match:
                            prefix: "/pkg.report.reportpb.ReportService/Get"
                            headers:
                              - name: "Content-Type"
                                prefixMatch: "application/grpc-web-text"
                          route:
                            cluster: scoretrak
                            idle_timeout: 0s
                            max_grpc_timeout: 0s
                        - match:
                            prefix: "/"
                            headers:
                              - name: "Content-Type"
                                prefixMatch: "application/grpc-web-text"
                          route:
                            cluster: scoretrak
                            max_grpc_timeout: 0s
# STATIC CONTENT:
#                        - match:
#                            prefix: "/"
#                          route:
#                            cluster: static_content_server

                      cors:
                        allow_origin_string_match:
                          - prefix: "*"
                        allow_methods: GET, PUT, DELETE, POST, OPTIONS
                        allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout,authorization
                        max_age: "1728000"
                        expose_headers: custom-header-1,grpc-status,grpc-message
                http_filters:
                  - name: envoy.filters.http.grpc_web
                  - name: envoy.filters.http.cors
                  - name: envoy.filters.http.router
  clusters:
    - name: scoretrak
      connect_timeout: 0.25s
      type: logical_dns
      http2_protocol_options: {}
      lb_policy: round_robin
      load_assignment:
        cluster_name: cluster_0
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: scoretrak
                      port_value: 33333
